--- a/Algoritimo.ipynb
+++ b/Algoritimo.ipynb
@@ -443,16 +443,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: [Galestorm, Devourer, Early Reaper, Endurance, Survival Instinct, Crush Them, Head Hunter]\n"
+      "Encontramos 1 combinação que satisfaz as condições!\n",
+      "Sendo esta:\n",
+      "                   ('Capacete1', 'Peitoral1', 'Braçadeiras1', 'Lâmina1', 'Punho1', 'Guarda1')\n",
+      "Galestorm                                                        650                         \n",
+      "Devourer                                                         820                         \n",
+      "Early Reaper                                                       0                         \n",
+      "Endurance                                                          0                         \n",
+      "Survival Instinct                                                  0                         \n",
+      "Crush Them                                                       620                         \n",
+      "Head Hunter                                                      130                         \n"
      ]
     }
    ],
@@ -463,7 +470,15 @@
     "df_filtrado1 = df_comb.loc[:, df_comb.loc[\"Devourer\"] >= 600]\n",
     "df_filtrado2 = df_filtrado1.loc[:, df_filtrado1.loc[\"Endurance\"] >= 600]\n",
     "df_filtrado3 = df_filtrado2.loc[:, df_filtrado2.loc[\"Head Hunter\"] >= 600]\n",
-    "print(df_filtrado3)"
+    "\n",
+    "if df_filtrado3.shape[1] == 0:\n",
+    "    print(\"Infelizmente não existem combinações que satisfaçam as condições :(\")\n",
+    "else:\n",
+    "    if df_filtrado3.shape[1] == 1:\n",
+    "        print(f\"Encontramos 1 combinação que satisfaz as condições!\", \"Sendo esta:\", sep=\"\\n\")\n",
+    "    else:\n",
+    "        print(f\"Encontramos {df_filtrado3.shape[1]} combinações que satisfazem as condições!\", \"São elas:\", sep=\"\\n\")\n",
+    "    print(df_filtrado3)"
    ]
   }
  ],
